--- a/docs/package.json
+++ b/docs/package.json
@@ -10,8 +10,6 @@
   "license": "ISC",
   "dependencies": {
     "bootstrap": "^5.2.3",
-    "bootstrap-table": "^1.21.1",
-    "jquery": "^3.6.1",
-    "moment": "^2.29.4"
+    "bootstrap-table": "^1.21.1"
   }
 }
