--- a/docs/package.json
+++ b/docs/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "bootstrap": "^5.2.3",
-    "bootstrap-table": "^1.21.1"
+    "bootstrap-table": "^1.21.1",
+    "pretty-bytes": "^6.0.0"
   }
 }
