--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -30,6 +30,10 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+      - name: Npm build
+        run: |
+          cd docs
+          npm install
       - name: Setup Pages
         uses: actions/configure-pages@v2
       - name: Upload artifact
